--- a/package.json
+++ b/package.json
@@ -11,15 +11,23 @@
   "license": "MIT",
   "dependencies": {
     "@gondel/core": "*",
-    "@gondel/plugin-hot": "*"
+    "@gondel/plugin-hot": "*",
+    "handlebars": "^4.0.11",
+    "handlebars-template-loader": "^1.0.0"
   },
   "devDependencies": {
+    "@types/node": "^10.9.4",
+    "css-loader": "^0.28.11",
     "html-webpack-plugin": "3.0.4",
+    "node-sass": "^4.8.3",
+    "react-scripts-ts": "2.17.0",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
     "ts-loader": "4.0.0",
     "typescript": "3.0.1",
+    "uuid": "^3.2.1",
     "webpack": "4.0.1",
     "webpack-cli": "2.0.10",
-    "webpack-serve": "0.1.5",
-    "react-scripts-ts": "2.17.0"
+    "webpack-serve": "0.1.5"
   }
 }
